Add description of meta-pack, align met-pack files with Java representation.